<?xml version="1.0" encoding="utf-8"?>
<!--

    Group 18
    Kyle Colantonio, 2595744
    4/28/2017

    Copyright (C) 2017  Kyle Colantonio <kyle10468@gmail.com>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources>
    <!-- Application related values -->
    <string name="app_name">HelloWorld</string>
    <string name="app_version">2017.427.0</string>

    <!-- Basic values -->
    <string name="please_wait">Please wait&#8230;</string>
    <string name="loading">Loading&#8230;</string>

    <!-- List of all Firebase providers -->
    <string name="provider_firebase">Firebase</string>
    <string name="provider_google">Google</string>
    <string name="provider_facebook">Facebook</string>
    <string name="provider_twitter">Twitter</string>
    <string name="provider_github">GitHub</string>
    <string name="provider_anonymous">Anonymous</string>

    <!-- Titles for all Activities -->
    <string name="title_main">@string/app_name</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_settings">Settings</string>
    <string name="title_join">Join</string>

    <!-- Titles for all Dialogs and Progress Dialogs  -->
    <string name="dialog_title_change_password">Change password</string>
    <string name="dialog_progress_login">Logging in</string>
    <string name="dialog_progress_register">Creating account</string>
    <string name="dialog_progress_loading">Loading</string>
    <string name="dialog_progress_change_password">Changing password</string>
    <string name="dialog_progress_save">Saving</string>
    <string name="dialog_progress_upload">Uploading</string>
    <string name="dialog_progress_loading_groups">Loading groups</string>

    <!-- Menu item values -->
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_signout">Logout</string>
    <string name="menu_leave">Leave group</string>

    <!-- Actions that can actually "do work"  -->
    <string name="action_register">Register</string>
    <string name="action_login_email">Login</string>
    <string name="action_login_google">Sign in with Google</string>
    <string name="action_save">Save</string>
    <string name="action_confirm">OK</string>
    <string name="action_cancel">Cancel</string>

    <!-- Links that only trigger separate Activities -->
    <string name="link_register">Don\'t have an account? Sign up</string>
    <string name="link_login">Already have an account? Login</string>
    <string name="link_password_change">Change password</string>

    <!-- Hints for all inputs -->
    <string name="hint_action_search">Search here</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_current">Current password</string>
    <string name="hint_password_new">New password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="hint_notifications">Enable notification sounds</string>

    <!-- Static text -->
    <string name="text_name">Display name</string>
    <string name="text_email">Email</string>
    <string name="text_user_id">User ID</string>
    <string name="text_provider">Provider</string>
    <string name="text_version">App version</string>
    <string name="text_notifications">Notifications</string>

    <!-- Image descriptions -->
    <string name="desc_app_logo">HelloWorld smiley</string>
    <string name="desc_profile_picture">User profile picture</string>

    <!-- Messages that do not require any action (successful messages) -->
    <string name="msg_register_success">Account created successfully! A verification email was sent to %1$s</string>
    <string name="msg_login_verify_email">A new verification email has been sent to %1$s</string>
    <string name="msg_profile_picture_update">Profile picture updated successfully</string>
    <string name="msg_password_update">Password updated successfully</string>
    <string name="msg_profile_update">Profile changes saved successfully</string>
    <string name="msg_reauthenticate">Please login again to continue</string>
    <string name="msg_signout">You have been signed out</string>
    <string name="msg_group_leave">You have left the group</string>

    <!-- Error messages that require action (unsuccessful messages) -->
    <string name="error_msg_google_play">Failed to connect to Google Play Services. Please try again</string>
    <string name="error_msg_login">Failed to login to account. Please try again</string>
    <string name="error_msg_register">Failed to create account. Please try again</string>
    <string name="error_msg_settings_load">Failed to load settings. Please try again</string>
    <string name="error_msg_profile_picture_update">Failed to update profile picture. Please try again</string>
    <string name="error_msg_reauthenticate">Failed to re-authenticate account. Please try again</string>
    <string name="error_msg_password_update">Failed to update password. Please try again</string>
    <string name="error_msg_profile_update">Failed to update profile. Please try again</string>
    <string name="error_msg_groups_load">Failed to load available groups. Please try again</string>
    <string name="error_msg_group_join">Failed to join group. Please try again</string>
    <string name="error_msg_group_leave">Failed to leave group. Please try again</string>
    <string name="error_msg_send">Failed to send message. Please try again</string>
    <string name="error_msg_messages">Failed to load messages. Please try again</string>

    <!-- Errors relating to user input -->
    <string name="error_input_name">Please enter your display name</string>
    <string name="error_input_email">Please enter a valid email address</string>
    <string name="error_input_password">Your password must be at least 6 characters long</string>
    <string name="error_input_password_current">Please enter your current password</string>
    <string name="error_input_password_new">Your new password must be at least 6 characters long</string>
    <string name="error_input_password_confirm">Passwords do not match</string>
    <string name="error_input_message_empty">Please enter a message</string>
    <string name="error_input_message_length">Message cannot be longer than 512 characters</string>
</resources>
